Update CMS config for GitHub OAuth backend

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: Harounm93/web-studio-one
   branch: main
 
 media_folder: "public/images/uploads"
