Fix: Remove overly broad rewrites that block static files

--- a/vercel.json
+++ b/vercel.json
@@ -4,11 +4,7 @@
   "framework": "vite",
   "installCommand": "npm install --legacy-peer-deps",
   "devCommand": "npm run dev",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
-  ]
+  "cleanUrls": true,
+  "trailingSlash": false
 }
 
