--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,7 @@
 {
+  "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
-  "installCommand": "npm install --legacy-peer-deps",
-  "devCommand": "npm run dev",
-  "cleanUrls": true,
-  "trailingSlash": false
+  "installCommand": "npm install --legacy-peer-deps"
 }
 
