--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,9 +2,8 @@ backend:
   name: github
   repo: Harounm93/web-studio-one
   branch: main
-  base_url: https://api.netlify.com
-  auth_endpoint: auth
-  site_domain: e94a1c00-edfc-473d-9aac-d0b933816816.netlify.app
+  base_url: https://web-studio-one-gamma.vercel.app
+  auth_endpoint: api/auth
 
 media_folder: "public/images/uploads"
 public_folder: "/images/uploads"
