--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "framework": "vite",
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install --legacy-peer-deps"
+  "installCommand": "npm install --legacy-peer-deps",
+  "rewrites": [
+    { "source": "/admin", "destination": "/admin/index.html" },
+    { "source": "/admin/", "destination": "/admin/index.html" },
+    { "source": "/api/auth", "destination": "/api/auth" },
+    { "source": "/((?!admin|api).*)", "destination": "/index.html" }
+  ]
 }
 
